<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rikvanbelle.drinksafe.PersonalSettingsActivity">

    <EditText
        android:hint="@string/first_name"
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/last_name"
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/e_mail"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/password"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/date_of_birth"
        android:id="@+id/dateOfBirth"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/weight"
        android:id="@+id/weight"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/length"
        android:id="@+id/length"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/men"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/men"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/woman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/woman"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <Button
        android:id="@+id/register"
        android:text="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onConfirm"/>

</LinearLayout>
