<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.rikvanbelle.drinksafe.HomeActivity">

    <include layout="@layout/my_toolbar_with_search" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.rikvanbelle.drinksafe.HomeActivity">

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
        <TextView
            android:id="@+id/timer_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:textSize="35dp" />
        <TextView
            android:text="Stuur na"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:textAlignment="center"
            android:id="@+id/hours_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/hours" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context="com.example.rikvanbelle.drinksafe.HomeActivity">

        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onStartActivity"
            android:text="@string/start" />

        <Button
            android:id="@+id/overview_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onOverview"
            android:text="@string/overview" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onStopActivity"
            android:text="@string/stop" />
    </LinearLayout>

    <TextView
        android:id="@+id/alcohol_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="0 ‰" />

    <ListView
        android:id="@+id/founded_beer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>
